# app/Models/MailContent.php
@@ -1,0 +1,56 @@
+<?php
+
+namespace App\Models;
+
+use DateTimeInterface;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+use Spatie\Activitylog\Traits\LogsActivity;
+use Spatie\Activitylog\LogOptions;
+
+use App\Traits\HasTranslations;
+
+use Helper;
+
+class MailContent extends Model
+{
+    use HasFactory, LogsActivity, HasTranslations;
+
+    protected $fillable = [
+        'fullname',
+        'email',
+        'phone_number',
+        'remarks',
+    ];
+
+    public function getEncryptedIdAttribute() {
+        return Helper::encode( $this->attributes['id'] );
+    }
+
+    public $translatable = [ 'remarks' ];
+
+    protected function serializeDate( DateTimeInterface $date ) {
+        return $date->timezone( 'Asia/Kuala_Lumpur' )->format( 'Y-m-d H:i:s' );
+    }
+
+    protected static $logAttributes = [
+        'fullname',
+        'email',
+        'phone_number',
+        'remarks',
+    ];
+
+    protected static $logName = 'mail_contents';
+
+    protected static $logOnlyDirty = true;
+
+    public function getActivitylogOptions(): LogOptions {
+        return LogOptions::defaults()->logFillable();
+    }
+
+    public function getDescriptionForEvent( string $eventName ): string {
+        return "{$eventName} mail_content";
+    }
+}
