# public/docs/api/openapi.yaml
@@ -5,8 +5,58 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'http://localhost'
+    url: 'http://localhost/infinite-design/api/v1'
 paths:
+  /api/v1/contact-us:
+    post:
+      summary: '1. Enquiry Mail'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - 'Contact-Us API'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                fullname:
+                  type: string
+                  description: 'The fullname for contact us enquiry.'
+                  example: 'John Wick'
+                email:
+                  type: string
+                  description: 'The email for contact us enquiry.'
+                  example: johnwick@gmail.com
+                phone_number:
+                  type: string
+                  description: 'The phone_number for contact us enquiry.'
+                  example: '012342123'
+                message:
+                  type: string
+                  description: 'The message for contact us enquiry.'
+                  example: 'lorem ipsum..'
+              required:
+                - email
+                - phone_number
+                - message
+      security: []
   /api/v1/users:
     post:
       summary: '1. Create an user'
@@ -48,14 +98,10 @@ paths:
                   type: string
                   description: 'The email for register.'
                   example: johnwick@gmail.com
-                calling_code:
+                otp_code:
                   type: string
-                  description: 'The calling code for register.'
-                  example: '+60'
-                phone_number:
-                  type: integer
-                  description: 'The phone number for register.'
-                  example: 123344212
+                  description: 'The otp for register.'
+                  example: '123456'
                 password:
                   type: string
                   description: 'The password for register.'
@@ -68,8 +114,7 @@ paths:
                 - tmp_user
                 - fullname
                 - email
-                - calling_code
-                - phone_number
+                - otp_code
                 - password
                 - password_confirmation
       security: []
@@ -180,13 +225,13 @@ paths:
                   type: string
                   description: 'The email for login.'
                   example: johnwick@mail.com
-                type:
+                request_type:
                   type: integer
                   description: 'The request type for OTP.'
                   example: 1
               required:
                 - email
-                - type
+                - request_type
       security: []
   /api/v1/otp/resend:
     post:
@@ -225,16 +270,19 @@ paths:
                   type: string
                   description: 'The email for login.'
                   example: johnwick@mail.com
-                type:
+                request_type:
                   type: integer
                   description: 'The request type for OTP.'
                   example: 2
               required:
                 - tmp_user
                 - email
-                - type
+                - request_type
       security: []
 tags:
+  -
+    name: 'Contact-Us API'
+    description: ''
   -
     name: 'User API'
     description: ''
